--- a/VueRouterDemo/package.json
+++ b/VueRouterDemo/package.json
@@ -4,6 +4,7 @@
   "description": "It's my demo for practicing vue-router",
   "main": "index.js",
   "scripts": {
+    "start": "node devServer.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:dev": "webpack --config webpack.config.dev.js"
   },
@@ -14,7 +15,12 @@
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "css-loader": "^0.28.4",
+    "eslint": "^4.1.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-vue": "^2.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "webpack": "2.2.1",
+    "webpack-dev-server": "^2.5.1"
   }
 }
