--- a/VueRouterDemo/package.json
+++ b/VueRouterDemo/package.json
@@ -14,13 +14,25 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^0.9.1",
+    "babel-plugin-transform-async-functions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-vue": "^2.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "style-loader": "^0.18.2",
+    "vue-hot-reload-api": "^2.1.0",
+    "vue-loader": "^13.0.0",
+    "vue-template-compiler": "^2.3.4",
     "webpack": "2.2.1",
     "webpack-dev-server": "^2.5.1"
+  },
+  "dependencies": {
+    "vue": "^2.3.4"
   }
 }
